# err_

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  er.svgz  err_.H  err_.cxx  err_.desktop.in  err_.svgz  error.os.svgz  main.cpp
.deb/: Readme.md  err_0.1.0.deb  err_0.2.9.deb  err_0.2.deb  err_0.3.deb
Resources/: err_.desktop.in  res.qrc  txtlogo.svgz
images/: don't-readme.md
